# VI_PO

./: .gitignore  README.md  pyproject.toml
notebooks/: vpo_full_process_demo.ipynb
paper/: main.tex  references.bib
scripts/: run_hpo_synthetic.py  run_po_dsl_stress.py
src/vpo/: __init__.py  data.py  hpo.py  order.py  po_dsl.py  poset.py  vi.py
tests/: test_constraints.py  test_poset.py
